# pcapng_slicer

./: .gitignore  CMakeLists.txt  README.md  null.cc
cmake/: pcapng_slicer-config.cmake.in  utils.cmake
include/: CMakeLists.txt
include/pcapng_slicer/: CMakeLists.txt  error_type.h  export.h  interface.h  options.h  packet.h  reader.h  writer.h
src/: CMakeLists.txt  block_reader.cc  block_reader.h  interface.cc  interface_private.h  options.cc  packet.cc  packet_private.cc  packet_private.h  read_utils.h  reader.cc  section_private.cc  writer.cc
src/pcapng_slicer/: CMakeLists.txt  block_reader.cc  block_reader.h  block_types.h  error.h  error_type.h  interface.cc  interface_private.h  packet.cc  packet.h  packet_private.cc  packet_private.h  reader.cc  reader.h  section_private.cc  section_private.h
tests/: CMakeLists.txt  read_tests.cc  test_config.h.in  write_tests.cc
tests/resources/: no_options.pcapng  with_options.pcapng
